import 'package:image/image.dart' as image_lib;
import 'package:img_classification/model/option_enum.dart';

/// A model class that holds the necessary data for performing image inference.
///
/// This class encapsulates the image to be processed, the address of the
/// TensorFlow Lite interpreter, the labels for classification, the input
/// tensor shape, and the output tensor shape.
///
/// [image]: The image to be processed.
/// [interpreterAddress]: The memory address of the TensorFlow Lite interpreter.
/// [labels]: The list of labels for classification.
/// [inputShape]: The shape of the input tensor.
/// [outputShape]: The shape of the output tensor.
/// [normalizeMethod]: How pixel value are normalized. Default no normalization
/// [isBinary]: A flag indicating whether the model is binary or not. Default = false
/// [binaryThreshold]: The threshold for binary classification. Default = 0
class InferenceModel {
  image_lib.Image? image;
  int interpreterAddress;
  List<String> labels;
  List<int> inputShape; // i.e. [1, 224, 224, 3]
  List<int> outputShape; //i.e. [1, 1000]
  NormalizeMethod normalizeMethod;
  bool isBinary;
  double binaryThreshold;

  InferenceModel(this.image, this.interpreterAddress, this.labels,
      this.inputShape, this.outputShape,
      {this.normalizeMethod = NormalizeMethod.none, this.isBinary = false, this.binaryThreshold = 0});
}
